Tweak headers in invoice printout

--- a/app/views/invoices/show.haml
+++ b/app/views/invoices/show.haml
@@ -33,7 +33,7 @@
           %td{style: "padding: 5px;"} <strong>Project</strong>
           %td{style: "padding: 5px;"} <strong>Description</strong>
           %td{style: "padding: 5px;"} <strong>Rate</strong>
-          %td{style: "padding: 5px; white-space: nowrap;"} <strong># hrs</strong>
+          %td{style: "padding: 5px;"} <strong>Hours</strong>
           %td{style: "padding: 5px;"} <strong>Cost</strong>
 
         - @invoice.work_entries.each do |entry|
