Download a dump of your projects, work entries, or invoices

--- a/app/views/users/show.haml
+++ b/app/views/users/show.haml
@@ -4,3 +4,9 @@
 %h1= @user.email.capitalize
 
 %p Member since #{@user.created_at.to_date}
+
+%h3 Download data
+
+%p= link_to "Projects & clients", download_projects_path
+%p= link_to "Work entries", download_work_entries_path
+%p= link_to "Invoices", download_invoices_path
