WorkEntries goals field; assorted other fixes
- When creating a timer, enter a goal for it
- When stopping a timer, enter what you accomplished (invoice notes)
- Black favicon by default (red is extraneous for now)
- Invoice printout uses h2 not h1
- Invoice preview ignores unbillable entries when showing orphans
- Timesheet "Bill?" column changed to "Status"; style tweaks

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -25,7 +25,8 @@ table.striped {
 
 .center { text-align: center; }
 
-.small { width: 100px; }
+.small  { width: 100px; }
+.medium { width: 200px; }
 
 .inline { display: inline-block; }
 
