--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -52,6 +52,8 @@ table.striped {
 
 .tooltip { white-space: normal; }
 
+.max-400 { max-width: 400px; }
+
 
 
 .feature {
@@ -62,6 +64,9 @@ table.striped {
   border: 1px solid #eee;
   border-radius: 5px;
 }
+
+
+
 
 
 // for Devise forms
