--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -11,10 +11,12 @@
 %table.form
   %tr
     %th Client
-    %th Name
+    %th Project
+    %th Active?
     %th
   - @projects.each do |project|
     %tr
       %td= link_to project.client.name, project.client
       %td= link_to project.name, project
+      %td= project.active? ? "Yes" : "No"
       %td= link_to glyph('pencil'), edit_project_path(project)
