--- a/app/views/users/show.haml
+++ b/app/views/users/show.haml
@@ -7,6 +7,6 @@
 
 %h3 Download data
 
-%p= link_to "Projects & clients", download_projects_path
+%p= link_to "Projects", download_projects_path
 %p= link_to "Work entries", download_work_entries_path
 %p= link_to "Invoices", download_invoices_path
