Projects: Fix incorrect rate on Invoices#show

--- a/app/views/invoices/show.haml
+++ b/app/views/invoices/show.haml
@@ -43,7 +43,7 @@
             %td{style: "padding: 5px; font-size: 14px;"}
               = entry.invoice_notes
             %td{style: "padding: 5px; font-size: 14px;"}
-              = entry.project.rate.format
+              = entry.project.inherited_rate.format
             %td{style: "padding: 5px; font-size: 14px;"}
               = number_with_precision(entry.duration, precision: 2)
             %td{style: "padding: 5px; font-size: 14px;"}
